# ecs

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md  cxx_modules_rules.cmake  presets.clang.json  presets.gcc.json  presets.msvc.json  xx.CMakePresets.json
.github/workflows/: build.yml  ccpp.yml  clang.yml  clang_14.yml  clang_14_libstdc++_12.yml  clang_15.yml  clang_libc++.yml  clang_libstdc++.yml  clang_linux.yml  clang_with_module.yml  gcc.yml  gcc_11.yml  gcc_12.yml  gcc_13.yml  msbuild.yml  msvc.yml  single_include_header.yml
benchmark/: CMakeLists.txt  bench_baseline.cpp  bench_component.cpp  bench_hierarchy.cpp  bench_lower_bound.cpp  bench_particles.cpp  bench_ranged.cpp  bench_runtime.cpp  bench_sorting.cpp  bench_system.cpp  component.cpp  ecs.cpp  global.h  helper.cpp  helper.h  hierarchy.cpp  main.cpp  particles.cpp  shared.h  shared_system.cpp  system.cpp
ecs/: CMakeLists.txt  component_pool.h  component_pool_base.h  ecs.cpp  ecs.h  entity.h  entity_range.h  function.h  runtime.h  system.h  system_impl.h  system_inspector.h  thread_unique.h  types.h
examples/concurrency/: CMakeLists.txt  concurrency.cpp
examples/custom_contract_violation_handler/: CMakeLists.txt  custom_contract_violation_handler.cpp
examples/entt_example/: CMakeLists.txt  entt_example.cpp
examples/example/: CMakeLists.txt  example.cpp
examples/filtering/: CMakeLists.txt  filtering.cpp
examples/finite_state_machine/: CMakeLists.txt  finite_state_machine.cpp
examples/frequency/: CMakeLists.txt  frequency.cpp
examples/global_component/: CMakeLists.txt  global_component.cpp
examples/hierarchy/: CMakeLists.txt  hierarchy.cpp
examples/interval/: CMakeLists.txt  interval.cpp
examples/mandelbrot/: CMakeLists.txt  mandelbrot.cpp
examples/parallelism/: CMakeLists.txt  parallelism.cpp
examples/plague_spell/: CMakeLists.txt  plague_spell.cpp
examples/pmr_allocator_aware/: CMakeLists.txt  pmr_allocator_aware.cpp
examples/pmr_allocator_support/: CMakeLists.txt  pmr_allocator_support.cpp
examples/pmr_custom_component/: CMakeLists.txt  pmr_custom_component.cpp
examples/scheduler/: CMakeLists.txt  scheduler.cpp
examples/scheduler_layout_demo/: CMakeLists.txt  scheduler_layout_demo.cpp
examples/shared_components/: CMakeLists.txt  shared_components.cpp
examples/sorting/: CMakeLists.txt  sorting.cpp
examples/tagged_components/: CMakeLists.txt  tagged_components.cpp
examples/variant/: CMakeLists.txt  variant.cpp
include/: CMakeLists.txt
include/ecs/: component_flags.h  component_pool.h  component_pool_base.h  component_specifier.h  context.h  contract.h  ecs.h  ecs.ixx  ecs_sh.h  ecs_sh_includes.txt  entity.h  entity_id.h  entity_iterator.h  entity_range.h  flags.h  make_single_header.bat  make_single_header.ps1  options.h  parent.h  runtime.h  scheduler.h  system.h  system_base.h  system_impl.h  system_inspector.h  system_scheduler.h  system_verification.h  threaded.h  type_hash.h  types.h  variant.h
include/ecs/detail/: array_scatter_allocator.h  builder_global_argument.h  builder_hierachy_argument.h  builder_ranged_argument.h  builder_selector.h  builder_sorted_argument.h  component_flags.h  component_pool.h  component_pool_base.h  component_pools.h  context.h  contract.h  entity_iterator.h  entity_offset.h  entity_range.h  entity_range_iterator.h  find_entity_pool_intersections.h  flags.h  frequency_limiter.h  gorking_list.h  interval_limiter.h  job_detail.h  listarray.h  operation.h  options.h  parent_id.h  pool_entity_walker.h  pool_range_walker.h  pool_walker.h  power_list.h  range_tree.h  scheduler.h  scheduler_context.h  scheduler_job.h  static_scheduler.h  stride_view.h  system.h  system_base.h  system_defs.h  system_global.h  (+9 more)
unittest/: CMakeLists.txt  array_scatter_allocator.cpp  catch.hpp  component deletion.cpp  component destruction.cpp  component growth.cpp  component initializer.cpp  component mishandling.cpp  component ordering.cpp  component removal.cpp  component storage tests.cpp  component_flags.cpp  component_pool.cpp  component_removal.cpp  constexpr.cpp  entity sorting.cpp  entity_range.cpp  filtering.cpp  frequency.cpp  global_component.cpp  hierarchy.cpp  interval.cpp  listarray.cpp  memory model.cpp  missing storage.cpp  mutable lambdas.cpp  negative ids.cpp  override_contract_handler_to_throw.h  range intersect.cpp  range_tree.cpp  ranged add.cpp  runtime.cpp  scheduler.cpp  shared component.cpp  shared_component.cpp  sorting.cpp  system argument ordering.cpp  system.cpp  system_options.cpp  tagged_pointer.cpp  (+7 more)
