cmake_minimum_required (VERSION 3.15)

macro(make_test)
	add_executable (${ARGV0} ${ARGV1})
	target_link_libraries(${ARGV0} ecs)
	add_test(${ARGV0} ${ARGV0})

if (MSVC)
	target_compile_options(${ARGV0} PRIVATE  /bigobj) # thanks hierarchy.cpp
	#target_compile_options(${ARGV0} PRIVATE /RTC- /fsanitize=address)
	#target_link_options(${ARGV0} PRIVATE -fsanitize=undefined)
else()
	target_compile_options(${ARGV0} PRIVATE -fsanitize=undefined,address)
	target_link_options(${ARGV0} PRIVATE -fsanitize=undefined,address)
endif()

endmacro()

make_test (test_component_removal "component_removal.cpp")
make_test (test_component_pool "component_pool.cpp")
make_test (test_entity_range "entity_range.cpp")
make_test (test_runtime "runtime.cpp")
make_test (test_systems "system.cpp")
make_test (test_transient_components "transient_components.cpp")
make_test (test_global_component "global_component.cpp")
make_test (test_sorting "sorting.cpp")
make_test (test_filtering "filtering.cpp")
make_test (test_scheduler "scheduler.cpp")
make_test (test_system_options "system_options.cpp")
make_test (test_interval "interval.cpp")
make_test (test_hierarchy "hierarchy.cpp")
make_test (test_tagged_pointer "tagged_pointer.cpp")
